--- a/docker/standalone-compose.yml
+++ b/docker/standalone-compose.yml
@@ -7,33 +7,32 @@ services:
   mongo1:
     build: mongo:7.0
     restart: always
-    hostname: mongo1
+    container_name: mongo1
     command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
     networks:
       - services-network
     ports:
       - 27017:27017
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     healthcheck:
-      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'host.docker.internal:27017'}]}) }" | mongosh --port 27017 --quiet
+      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'mongo1:27017'}]}) }" | mongosh --port 27017 --quiet
       interval: 5s
       timeout: 30s
       start_period: 0s
-      start_interval: 1s
       retries: 30
     volumes:
       - "mongo1_data:/data/db"
       - "mongo1_config:/data/configdb"
 
-  mongodb-seed:
+  mongo-seed:
     image: mongo:7.0
+    container_name: mongo-seed
+    networks:
+      - services-network
     links:
       - mongo1
     volumes:
       - ./mongo-seed:/mongo-seed
-    command:
-      /mongo-seed/import.sh
+    command: /mongo-seed/import.sh
     depends_on:
       - mongo1
 
@@ -58,9 +57,8 @@ services:
       - "8080:8080"
     volumes:
       - pulsar_data:/pulsar/data
-      - ./init-pulsar-connector.sh:/init-pulsar-connector.sh
+      - ./init-pulsar-connector.sh:/init-pulsar-connector.sh:ro
       - ../connectors/mongo:/mongo-connectors
-      # - ../connectors/mongo/source/mongo-source-config.yaml:/mongo-source-config.yaml
     command: bash -c "bin/apply-config-from-env.py conf/standalone.conf && exec bin/pulsar standalone -nss && exec bin/pulsar sql-worker start"
     depends_on:
       - mongo1
@@ -86,7 +84,7 @@ services:
     networks:
       - services-network
     volumes:
-      - ./init-dashboard.sh:/init-dashboard.sh
+      - ./init-dashboard.sh:/init-dashboard.sh:ro
     command: /init-dashboard.sh
     depends_on:
       - dashboard
