--- a/docker/standalone-compose.yml
+++ b/docker/standalone-compose.yml
@@ -5,7 +5,7 @@ networks:
 
 services:
   mongo1:
-    build: mongo:7.0
+    image: mongo:latest
     restart: always
     container_name: mongo1
     command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
@@ -24,7 +24,7 @@ services:
       - "mongo1_config:/data/configdb"
 
   mongo-seed:
-    image: mongo:7.0
+    image: mongo:latest
     container_name: mongo-seed
     networks:
       - services-network
