Fixed standalone-compose.yml typo

--- a/connectors/mongo/sink/mongo-sink-config.yaml
+++ b/connectors/mongo/sink/mongo-sink-config.yaml
@@ -10,3 +10,5 @@ configs:
   database: "geoglify"
   collection: "shipsSync"
   syncType: "full_sync"
+  inputs:
+    - "persistent://public/default/mongo-sink"
