--- a/docker/standalone-compose.yml
+++ b/docker/standalone-compose.yml
@@ -6,7 +6,7 @@ networks:
 services:
 
   jobmanager:
-    image: flink:1.16.2-scala_2.12-java11
+    build: ../pyflink
     ports:
       - "8081:8081"
     command:
@@ -29,7 +29,7 @@ services:
         state.backend.rocksdb.localdir: /tmp/flink-rocksdb
 
   taskmanager:
-    image: flink:1.16.2-scala_2.12-java11
+    build: ../pyflink
     depends_on:
       - jobmanager
     command:
